--- a/index.html
+++ b/index.html
@@ -1,59 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Development</title>
     <meta
       name="description"
-      content="Homepage for my develeopment as a student in front end design @ Noroff"
+      content="Homepage for my develeopment as a student in front end design at Noroff"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Development</title>
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
-        <a href="#one">Hello world</a>
-        <a href="#two">Study</a>
-        <a href="#three">Private</a>
       </nav>
     </header>
     <main>
-      <section id="one">
-        <h1>Hello world!</h1>
-        <img
-          src="images/logo.jpg"
-          alt="Keyboard in front of desktop screens showing codes"
-        />
-        <p>
-          <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
-          Welcome to my homepage! Here I'll be putting into practice all the
-          things I've learned.
-        </p>
-      </section>
-      <section id="two">
-        <h1>Study</h1>
-        <p>
-          I am studying at Noroff, and all my learning is from digital courses
-          online.
-        </p>
-      </section>
-      <section id="three">
-        <h1>Private</h1>
-        <p>
-          I live in a town called Kongsvinger, and work as a teacher at the
-          moment. In the future I would love to work with front-end!
-        </p>
-      </section>
-      <img src="images/development.jpg" alt="development" />
+      <h1>Hello world!</h1>
+      <img
+        src="images/development.jpg"
+        alt="laptop showing codes in front of a mac on a desktop"
+      />
+      <p>
+        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+        Welcome to my homepage! Here I'll be putting into practice all the
+        things I've learned.
+      </p>
+
+      <h2>Study</h2>
+      <p>
+        I am studying at Noroff, and all my learning is from digital courses
+        online.
+      </p>
+      <h2>Private</h2>
+      <span>
+        I live in a town called Kongsvinger, and work as a teacher at the
+        moment. I really looking forward to work with
+        <span>front end!</span>
+      </span>
     </main>
     <footer>
-      For more info, you
+      &copy; For more info, you
       <a href="https://facebook.com">find me on Facebook</a>
     </footer>
   </body>
