--- a/about.html
+++ b/about.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Development</title>
+    <meta
+      name="description"
+      content="Homepage for my develeopment as a student in front end design at Noroff"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <p>This is my about page!</p>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html" class="active">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>About me</h1>
+      <img
+        src="images/development.jpg"
+        alt="laptop showing codes in front of a mac on a desktop"
+      />
+      <p>
+        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+        I live in a town called Kongsvinger, and work as a teacher and at the
+        same time I am studying to be a Front-End developer.
+      </p>
+    </main>
+    <footer>
+      &copy; For more info, you
+      <a href="https://facebook.com">find me on Facebook</a>
+    </footer>
   </body>
 </html>
