--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Development</title>
+    <meta
+      name="description"
+      content="Homepage for my develeopment as a student in front end design at Noroff"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <p>This is my contact page</p>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Contact information</h1>
+      <img
+        src="images/development.jpg"
+        alt="laptop showing codes in front of a mac on a desktop"
+      />
+      <p>
+        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+        If you want to get in touch and create some webpages for your company -
+        send me an e-mail on
+        <a href="mailto:jon.are.br@gmail.com">jon.are.br@gmail.com</a>. I will
+        contact you and we can together find a solution for your demands!
+      </p>
+    </main>
+    <footer>
+      &copy; For more info, you
+      <a href="https://facebook.com">find me on Facebook</a>
+    </footer>
   </body>
 </html>
