--- a/index.html
+++ b/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Development</title>
-    <meta
-      name="description"
-      content="Homepage for my develeopment as a student in front end design at Noroff"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="css/styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h1>Hello world!</h1>
-      <img
-        src="images/development.jpg"
-        alt="laptop showing codes in front of a mac on a desktop"
-      />
-      <p>
-        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
-        Welcome to my homepage! Here I'll be putting into practice all the
-        things I've learned.
-      </p>
 
-      <h2>Study</h2>
-      <p>
-        I am studying at Noroff, and all my learning is from digital courses
-        online.
-      </p>
-      <h2>Private</h2>
-      <span>
-        I live in a town called Kongsvinger, and work as a teacher at the
-        moment. I really looking forward to work with
-        <span>front end!</span>
-      </span>
-    </main>
-    <footer>
-      &copy; For more info, you
-      <a href="https://facebook.com">find me on Facebook</a>
-    </footer>
-  </body>
+<head>
+  <title>Development</title>
+  <meta name="description" content="Homepage for my develeopment as a student in front end design at Noroff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="css/styles.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Hello world!</h1>
+    <img src="images/development.jpg" alt="laptop showing codes in front of a mac on a desktop" />
+    <p>
+      <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+      Welcome to my homepage! Here I'll be putting into practice all the
+      things I've learned.
+    </p>
+
+    <h2>Study</h2>
+    <p>
+      I am studying at Noroff, and all my learning is from digital courses
+      online.
+    </p>
+    <h2>Private</h2>
+    <span>
+      I live in a town called Kongsvinger, and work as a teacher at the
+      moment. I really looking forward to work with
+      <span>front end!</span>
+    </span>
+  </main>
+  <footer>
+    &copy; For more info, you
+    <a href="https://facebook.com">find me on Facebook</a>
+  </footer>
+</body>
+
 </html>
