--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Homepage for my develeopment as a student in front end design at Noroff" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="css/styles.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/fe3b43ee88.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
