--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Homepage for my develeopment as a student in front end design at Noroff" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="css/styles.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/fe3b43ee88.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,12 +21,15 @@
   </header>
   <main>
     <h1>Hello world!</h1>
-    <img src="images/development.jpg" alt="laptop showing codes in front of a mac on a desktop" />
-    <p>
-      <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
-      Welcome to my homepage! Here I'll be putting into practice all the
-      things I've learned.
-    </p>
+    <section>
+      <img src="images/development.jpg" alt="computer on desk">
+      <p>
+        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+        Welcome to my homepage! Here I'll be putting into practice all the
+        things I've learned.
+      </p>
+    </section>
+
 
     <h2>Study</h2>
     <p>
@@ -38,6 +42,7 @@
       moment. I really looking forward to work with
       <span>front end!</span>
     </span>
+    <i class="fas fa-arrow-circle-right"></i>
   </main>
   <footer>
     &copy; For more info, you
