--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Homepage for my develeopment as a student in front end design at Noroff" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="css/styles.css" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/fe3b43ee88.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,6 +29,33 @@
       <a href="mailto:jon.are.br@gmail.com">jon.are.br@gmail.com</a>. I will
       contact you and we can together find a solution for your demands!
     </p>
+    <form action="form-success.php" method="POST">
+      <fieldset>
+        <legend>Your details</legend>
+        <label for="name">Your name</label>
+        <input type="text" name="name" id="name" class="form__input">
+        <label for="phone">Your phone number</label>
+        <input type="tel" name="phone" id="phone" class="form__input">
+        <label for="email">Your email</label>
+        <input type="email" name="email" id="email" class="form__input">
+        <p>Select your gender</p>
+        <input type="radio" id="female" name="gender" value="female">
+        <label for="female">Female</label>
+        <input type="radio" id="male" name="gender" value="male">
+        <label for="male">Male</label>
+        <input type="radio" id="undisclosed" name="gender" value="undisclosed">
+        <label for="undisclosed">Undisclosed</label>
+      </fieldset>
+      <fieldset>
+        <legend>Your purchase</legend>
+        <select>
+          <option value="product-one">Product One</option>
+          <option value="product-two">Product Two</option>
+          <option value="product-three">Product Three</option>
+        </select>
+      </fieldset>
+      <input type="submit" value="Buy product">
+    </form>
   </main>
   <footer>
     &copy; For more info, you
