--- a/index.html
+++ b/index.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Development</title>
+    <meta
+      name="description"
+      content="Homepage for my develeopment as a student in front end design at Noroff"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/fe3b43ee88.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<head>
-  <title>Development</title>
-  <meta name="description" content="Homepage for my develeopment as a student in front end design at Noroff" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="css/styles.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/fe3b43ee88.js" crossorigin="anonymous"></script>
-</head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Hello world!</h1>
+      <section>
+        <img src="images/development.jpg" alt="computer on desk" />
+        <p>
+          <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
+          Welcome to my homepage! Here I'll be putting into practice all the
+          things I've learned.
+        </p>
+      </section>
 
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <h1>Hello world!</h1>
-    <section>
-      <img src="images/development.jpg" alt="computer on desk">
+      <h2>Study</h2>
       <p>
-        <!--This is how we comment inside a html-file. It will not appear on the webpage, bur it is here inside the code.-->
-        Welcome to my homepage! Here I'll be putting into practice all the
-        things I've learned.
+        I am studying at Noroff, and all my learning is from digital courses
+        online.
       </p>
-    </section>
-
-
-    <h2>Study</h2>
-    <p>
-      I am studying at Noroff, and all my learning is from digital courses
-      online.
-    </p>
-    <h2>Private</h2>
-    <span>
-      I live in a town called Kongsvinger, and work as a teacher at the
-      moment. I really looking forward to work with
-      <span>front end!</span>
-    </span>
-    <i class="fas fa-arrow-circle-right"></i>
-  </main>
-  <footer>
-    &copy; For more info, you
-    <a href="https://facebook.com">find me on Facebook</a>
-  </footer>
-</body>
-
+      <h2>Private</h2>
+      <span>
+        I live in a town called Kongsvinger, and work as a teacher at the
+        moment. I really looking forward to work with
+        <span>front end!</span>
+      </span>
+      <i class="fas fa-arrow-circle-right"></i>
+    </main>
+    <footer>
+      &copy; For more info, you
+      <a href="https://facebook.com">find me on Facebook</a>
+    </footer>
+  </body>
 </html>
